crates/kreuzberg-ffi/include/kreuzberg.h

typedef struct KREUZBERGByteBufferPool KREUZBERGByteBufferPool;
typedef struct KREUZBERGContentFilterConfig KREUZBERGContentFilterConfig;
typedef struct KREUZBERGEmbeddingModelType KREUZBERGEmbeddingModelType;
typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGImageExtractionConfig KREUZBERGImageExtractionConfig;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLanguageDetectionConfig KREUZBERGLanguageDetectionConfig;
typedef struct KREUZBERGStringBufferPool KREUZBERGStringBufferPool;
typedef struct KREUZBERGTextAnnotation KREUZBERGTextAnnotation;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
typedef struct KREUZBERGUriKind KREUZBERGUriKind;
KREUZBERGContentFilterConfig *kreuzberg_content_filter_config_default(void);
KREUZBERGExtractionConfig *kreuzberg_extraction_config_default(void);
int32_t kreuzberg_extraction_config_needs_image_processing(const KREUZBERGExtractionConfig *this_);
KREUZBERGImageExtractionConfig *kreuzberg_image_extraction_config_default(void);
int32_t kreuzberg_clear_extractors(void);
char *kreuzberg_list_ocr_backends(void);
int32_t kreuzberg_clear_ocr_backends(void);
char *kreuzberg_list_post_processors(void);
int32_t kreuzberg_unregister_renderer(const char *name);
char *kreuzberg_list_renderers(void);
int32_t kreuzberg_clear_renderers(void);
char *kreuzberg_list_validators(void);
int32_t kreuzberg_clear_validators(void);
char *kreuzberg_sanitize_filename(const char *path);
char *kreuzberg_sanitize_path(const char *path);
int32_t kreuzberg_is_valid_utf8(const uint8_t *bytes,
                                uintptr_t bytes_len);
char *kreuzberg_clean_extracted_text(const char *text);
char *kreuzberg_reduce_tokens(const char *text,
                              const KREUZBERGTokenReductionConfig *config,
                              const char *language_hint);
KREUZBERGTextAnnotation *kreuzberg_bold(uint32_t start,
                                        uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_italic(uint32_t start,
                                          uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_underline(uint32_t start,
                                             uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_link(uint32_t start,
                                        uint32_t end,
                                        const char *url,
                                        const char *title);
KREUZBERGTextAnnotation *kreuzberg_code(uint32_t start,
                                        uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_strikethrough(uint32_t start,
                                                 uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_subscript(uint32_t start,
                                             uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_superscript(uint32_t start,
                                               uint32_t end);
KREUZBERGTextAnnotation *kreuzberg_font_size(uint32_t start,
                                             uint32_t end,
                                             const char *value);
KREUZBERGTextAnnotation *kreuzberg_color(uint32_t start,
                                         uint32_t end,
                                         const char *value);
KREUZBERGTextAnnotation *kreuzberg_highlight(uint32_t start,
                                             uint32_t end);
KREUZBERGUriKind *kreuzberg_classify_uri(const char *url);
char *kreuzberg_safe_decode(const uint8_t *byte_data,
                            uintptr_t byte_data_len,
                            const char *encoding);
double kreuzberg_calculate_text_confidence(const char *text);
KREUZBERGStringBufferPool *kreuzberg_create_string_buffer_pool(uintptr_t pool_size,
                                                               uintptr_t buffer_capacity);
KREUZBERGByteBufferPool *kreuzberg_create_byte_buffer_pool(uintptr_t pool_size,
                                                           uintptr_t buffer_capacity);
char *kreuzberg_openapi_json(void);
int32_t kreuzberg_serve_default(void);
char *kreuzberg_normalize(const char *v);
char *kreuzberg_get_preset(const char *_name);
char *kreuzberg_list_presets(void);
int32_t kreuzberg_warm_model(const KREUZBERGEmbeddingModelType *model_type,
                             const char *cache_dir);
int32_t kreuzberg_download_model(const KREUZBERGEmbeddingModelType *model_type,
                                 const char *cache_dir);
int32_t kreuzberg_calculate_optimal_dpi(double page_width,
                                        double page_height,
                                        int32_t target_dpi,
                                        int32_t max_dimension,
                                        int32_t min_dpi,
                                        int32_t max_dpi);
char *kreuzberg_detect_languages(const char *text,
                                 const KREUZBERGLanguageDetectionConfig *config);
char *kreuzberg_extract_keywords(const char *text,
                                 const KREUZBERGKeywordConfig *config);
char *kreuzberg_compute_hash(const char *data);
char *kreuzberg_extract_text_from_pdf(const uint8_t *pdf_bytes,
                                      uintptr_t pdf_bytes_len);
char *kreuzberg_serialize_to_toon(const KREUZBERGExtractionResult *result);
char *kreuzberg_serialize_to_json(const KREUZBERGExtractionResult *result);
int32_t kreuzberg_unregister_ocr_backend(const char *name,
                                         char **out_error);