packages/csharp/src/Kreuzberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clear_extractors")]
    internal static extern void ClearExtractors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_ocr_backend")]
    internal static extern void UnregisterOcrBackend(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_ocr_backends")]
    internal static extern IntPtr ListOcrBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clear_ocr_backends")]
    internal static extern void ClearOcrBackends();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_post_processors")]
    internal static extern IntPtr ListPostProcessors();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_renderer")]
    internal static extern void UnregisterRenderer(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_renderers")]
    internal static extern IntPtr ListRenderers();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clear_renderers")]
    internal static extern void ClearRenderers();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_validators")]
    internal static extern IntPtr ListValidators();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clear_validators")]
    internal static extern void ClearValidators();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_sanitize_filename")]
    internal static extern IntPtr SanitizeFilename(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_sanitize_path")]
    internal static extern IntPtr SanitizePath(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_is_valid_utf8")]
    internal static extern int IsValidUtf8(
        IntPtr bytes
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_clean_extracted_text")]
    internal static extern IntPtr CleanExtractedText(
        [MarshalAs(UnmanagedType.LPStr)] string text
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_reduce_tokens")]
    internal static extern IntPtr ReduceTokens(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config,
        [MarshalAs(UnmanagedType.LPStr)] string languageHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_batch_reduce_tokens")]
    internal static extern IntPtr BatchReduceTokens(
        IntPtr texts,
        IntPtr config,
        [MarshalAs(UnmanagedType.LPStr)] string languageHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_bold")]
    internal static extern IntPtr Bold(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_italic")]
    internal static extern IntPtr Italic(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_underline")]
    internal static extern IntPtr Underline(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_link")]
    internal static extern IntPtr Link(
        uint start,
        uint end,
        [MarshalAs(UnmanagedType.LPStr)] string url,
        [MarshalAs(UnmanagedType.LPStr)] string title
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_code")]
    internal static extern IntPtr Code(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_strikethrough")]
    internal static extern IntPtr Strikethrough(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_subscript")]
    internal static extern IntPtr Subscript(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_superscript")]
    internal static extern IntPtr Superscript(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_font_size")]
    internal static extern IntPtr FontSize(
        uint start,
        uint end,
        [MarshalAs(UnmanagedType.LPStr)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_color")]
    internal static extern IntPtr Color(
        uint start,
        uint end,
        [MarshalAs(UnmanagedType.LPStr)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_highlight")]
    internal static extern IntPtr Highlight(
        uint start,
        uint end
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_classify_uri")]
    internal static extern IntPtr ClassifyUri(
        [MarshalAs(UnmanagedType.LPStr)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_safe_decode")]
    internal static extern IntPtr SafeDecode(
        IntPtr byteData,
        [MarshalAs(UnmanagedType.LPStr)] string encoding
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_calculate_text_confidence")]
    internal static extern double CalculateTextConfidence(
        [MarshalAs(UnmanagedType.LPStr)] string text
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_create_string_buffer_pool")]
    internal static extern IntPtr CreateStringBufferPool(
        ulong poolSize,
        ulong bufferCapacity
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_create_byte_buffer_pool")]
    internal static extern IntPtr CreateByteBufferPool(
        ulong poolSize,
        ulong bufferCapacity
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_openapi_json")]
    internal static extern IntPtr OpenapiJson();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_serve_default")]
    internal static extern void ServeDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunk_text")]
    internal static extern IntPtr ChunkText(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config,
        IntPtr pageBoundaries
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunk_text_with_heading_source")]
    internal static extern IntPtr ChunkTextWithHeadingSource(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config,
        IntPtr pageBoundaries,
        [MarshalAs(UnmanagedType.LPStr)] string headingSource
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunk_texts_batch")]
    internal static extern IntPtr ChunkTextsBatch(
        IntPtr texts,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunk_semantic")]
    internal static extern IntPtr ChunkSemantic(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config,
        IntPtr pageBoundaries
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_normalize")]
    internal static extern IntPtr Normalize(
        IntPtr v
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_get_preset")]
    internal static extern IntPtr GetPreset(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_list_presets")]
    internal static extern IntPtr ListPresets();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_warm_model")]
    internal static extern void WarmModel(
        IntPtr modelType,
        [MarshalAs(UnmanagedType.LPStr)] string cacheDir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_download_model")]
    internal static extern void DownloadModel(
        IntPtr modelType,
        [MarshalAs(UnmanagedType.LPStr)] string cacheDir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_calculate_optimal_dpi")]
    internal static extern int CalculateOptimalDpi(
        double pageWidth,
        double pageHeight,
        int targetDpi,
        int maxDimension,
        int minDpi,
        int maxDpi
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_detect_languages")]
    internal static extern IntPtr DetectLanguages(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_keywords")]
    internal static extern IntPtr ExtractKeywords(
        [MarshalAs(UnmanagedType.LPStr)] string text,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_compute_hash")]
    internal static extern IntPtr ComputeHash(
        [MarshalAs(UnmanagedType.LPStr)] string data
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_render_pdf_page_to_png")]
    internal static extern IntPtr RenderPdfPageToPng(
        IntPtr pdfBytes,
        ulong pageIndex,
        int dpi,
        [MarshalAs(UnmanagedType.LPStr)] string password
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extract_text_from_pdf")]
    internal static extern IntPtr ExtractTextFromPdf(
        IntPtr pdfBytes
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_serialize_to_toon")]
    internal static extern IntPtr SerializeToToon(
        IntPtr result
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_serialize_to_json")]
    internal static extern IntPtr SerializeToJson(
        IntPtr result
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_content_filter_config_default")]
    internal static extern IntPtr ContentFilterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_config_default")]
    internal static extern IntPtr ExtractionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_config_needs_image_processing")]
    internal static extern int ExtractionConfigNeedsImageProcessing(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_image_extraction_config_default")]
    internal static extern IntPtr ImageExtractionConfigDefault();
